System Software and Compiler Design/Lab Work And Extra Codes/19BCP138-Assignment-4/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    LPAREN
    RPAREN

Grammar

Rule 0     S' -> calc
Rule 1     calc -> expression
Rule 2     calc -> var_assign
Rule 3     calc -> empty
Rule 4     expression -> INT
Rule 5     expression -> FLOAT
Rule 6     expression -> NAME
Rule 7     expression -> expression TIMES expression
Rule 8     expression -> expression POWER expression
Rule 9     expression -> expression DIVIDE expression
Rule 10    expression -> expression PLUS expression
Rule 11    expression -> expression MINUS expression
Rule 12    var_assign -> NAME EQUALS expression
Rule 13    empty -> <empty>

Terminals, with rules where they appear

DIVIDE               : 9
EQUALS               : 12
FLOAT                : 5
INT                  : 4
LPAREN               : 
MINUS                : 11
NAME                 : 6 12
PLUS                 : 10
POWER                : 8
RPAREN               : 
TIMES                : 7
error                : 

Nonterminals, with rules where they appear

calc                 : 0
empty                : 3
expression           : 1 7 7 8 8 9 9 10 10 11 11 12
var_assign           : 2

Parsing method: LALR

state 0

    (0) S' -> . calc
    (1) calc -> . expression
    (2) calc -> . var_assign
    (3) calc -> . empty
    (4) expression -> . INT
    (5) expression -> . FLOAT
    (6) expression -> . NAME
    (7) expression -> . expression TIMES expression
    (8) expression -> . expression POWER expression
    (9) expression -> . expression DIVIDE expression
    (10) expression -> . expression PLUS expression
    (11) expression -> . expression MINUS expression
    (12) var_assign -> . NAME EQUALS expression
    (13) empty -> .

    INT             shift and go to state 5
    FLOAT           shift and go to state 6
    NAME            shift and go to state 7
    $end            reduce using rule 13 (empty -> .)

    calc                           shift and go to state 1
    expression                     shift and go to state 2
    var_assign                     shift and go to state 3
    empty                          shift and go to state 4

state 1

    (0) S' -> calc .



state 2

    (1) calc -> expression .
    (7) expression -> expression . TIMES expression
    (8) expression -> expression . POWER expression
    (9) expression -> expression . DIVIDE expression
    (10) expression -> expression . PLUS expression
    (11) expression -> expression . MINUS expression

    $end            reduce using rule 1 (calc -> expression .)
    TIMES           shift and go to state 8
    POWER           shift and go to state 9
    DIVIDE          shift and go to state 10
    PLUS            shift and go to state 11
    MINUS           shift and go to state 12


state 3

    (2) calc -> var_assign .

    $end            reduce using rule 2 (calc -> var_assign .)


state 4

    (3) calc -> empty .

    $end            reduce using rule 3 (calc -> empty .)


state 5

    (4) expression -> INT .

    TIMES           reduce using rule 4 (expression -> INT .)
    POWER           reduce using rule 4 (expression -> INT .)
    DIVIDE          reduce using rule 4 (expression -> INT .)
    PLUS            reduce using rule 4 (expression -> INT .)
    MINUS           reduce using rule 4 (expression -> INT .)
    $end            reduce using rule 4 (expression -> INT .)


state 6

    (5) expression -> FLOAT .

    TIMES           reduce using rule 5 (expression -> FLOAT .)
    POWER           reduce using rule 5 (expression -> FLOAT .)
    DIVIDE          reduce using rule 5 (expression -> FLOAT .)
    PLUS            reduce using rule 5 (expression -> FLOAT .)
    MINUS           reduce using rule 5 (expression -> FLOAT .)
    $end            reduce using rule 5 (expression -> FLOAT .)


state 7

    (6) expression -> NAME .
    (12) var_assign -> NAME . EQUALS expression

    TIMES           reduce using rule 6 (expression -> NAME .)
    POWER           reduce using rule 6 (expression -> NAME .)
    DIVIDE          reduce using rule 6 (expression -> NAME .)
    PLUS            reduce using rule 6 (expression -> NAME .)
    MINUS           reduce using rule 6 (expression -> NAME .)
    $end            reduce using rule 6 (expression -> NAME .)
    EQUALS          shift and go to state 13


state 8

    (7) expression -> expression TIMES . expression
    (4) expression -> . INT
    (5) expression -> . FLOAT
    (6) expression -> . NAME
    (7) expression -> . expression TIMES expression
    (8) expression -> . expression POWER expression
    (9) expression -> . expression DIVIDE expression
    (10) expression -> . expression PLUS expression
    (11) expression -> . expression MINUS expression

    INT             shift and go to state 5
    FLOAT           shift and go to state 6
    NAME            shift and go to state 15

    expression                     shift and go to state 14

state 9

    (8) expression -> expression POWER . expression
    (4) expression -> . INT
    (5) expression -> . FLOAT
    (6) expression -> . NAME
    (7) expression -> . expression TIMES expression
    (8) expression -> . expression POWER expression
    (9) expression -> . expression DIVIDE expression
    (10) expression -> . expression PLUS expression
    (11) expression -> . expression MINUS expression

    INT             shift and go to state 5
    FLOAT           shift and go to state 6
    NAME            shift and go to state 15

    expression                     shift and go to state 16

state 10

    (9) expression -> expression DIVIDE . expression
    (4) expression -> . INT
    (5) expression -> . FLOAT
    (6) expression -> . NAME
    (7) expression -> . expression TIMES expression
    (8) expression -> . expression POWER expression
    (9) expression -> . expression DIVIDE expression
    (10) expression -> . expression PLUS expression
    (11) expression -> . expression MINUS expression

    INT             shift and go to state 5
    FLOAT           shift and go to state 6
    NAME            shift and go to state 15

    expression                     shift and go to state 17

state 11

    (10) expression -> expression PLUS . expression
    (4) expression -> . INT
    (5) expression -> . FLOAT
    (6) expression -> . NAME
    (7) expression -> . expression TIMES expression
    (8) expression -> . expression POWER expression
    (9) expression -> . expression DIVIDE expression
    (10) expression -> . expression PLUS expression
    (11) expression -> . expression MINUS expression

    INT             shift and go to state 5
    FLOAT           shift and go to state 6
    NAME            shift and go to state 15

    expression                     shift and go to state 18

state 12

    (11) expression -> expression MINUS . expression
    (4) expression -> . INT
    (5) expression -> . FLOAT
    (6) expression -> . NAME
    (7) expression -> . expression TIMES expression
    (8) expression -> . expression POWER expression
    (9) expression -> . expression DIVIDE expression
    (10) expression -> . expression PLUS expression
    (11) expression -> . expression MINUS expression

    INT             shift and go to state 5
    FLOAT           shift and go to state 6
    NAME            shift and go to state 15

    expression                     shift and go to state 19

state 13

    (12) var_assign -> NAME EQUALS . expression
    (4) expression -> . INT
    (5) expression -> . FLOAT
    (6) expression -> . NAME
    (7) expression -> . expression TIMES expression
    (8) expression -> . expression POWER expression
    (9) expression -> . expression DIVIDE expression
    (10) expression -> . expression PLUS expression
    (11) expression -> . expression MINUS expression

    INT             shift and go to state 5
    FLOAT           shift and go to state 6
    NAME            shift and go to state 15

    expression                     shift and go to state 20

state 14

    (7) expression -> expression TIMES expression .
    (7) expression -> expression . TIMES expression
    (8) expression -> expression . POWER expression
    (9) expression -> expression . DIVIDE expression
    (10) expression -> expression . PLUS expression
    (11) expression -> expression . MINUS expression

    TIMES           reduce using rule 7 (expression -> expression TIMES expression .)
    DIVIDE          reduce using rule 7 (expression -> expression TIMES expression .)
    PLUS            reduce using rule 7 (expression -> expression TIMES expression .)
    MINUS           reduce using rule 7 (expression -> expression TIMES expression .)
    $end            reduce using rule 7 (expression -> expression TIMES expression .)
    POWER           shift and go to state 9

  ! POWER           [ reduce using rule 7 (expression -> expression TIMES expression .) ]
  ! TIMES           [ shift and go to state 8 ]
  ! DIVIDE          [ shift and go to state 10 ]
  ! PLUS            [ shift and go to state 11 ]
  ! MINUS           [ shift and go to state 12 ]


state 15

    (6) expression -> NAME .

    TIMES           reduce using rule 6 (expression -> NAME .)
    POWER           reduce using rule 6 (expression -> NAME .)
    DIVIDE          reduce using rule 6 (expression -> NAME .)
    PLUS            reduce using rule 6 (expression -> NAME .)
    MINUS           reduce using rule 6 (expression -> NAME .)
    $end            reduce using rule 6 (expression -> NAME .)


state 16

    (8) expression -> expression POWER expression .
    (7) expression -> expression . TIMES expression
    (8) expression -> expression . POWER expression
    (9) expression -> expression . DIVIDE expression
    (10) expression -> expression . PLUS expression
    (11) expression -> expression . MINUS expression

    TIMES           reduce using rule 8 (expression -> expression POWER expression .)
    DIVIDE          reduce using rule 8 (expression -> expression POWER expression .)
    PLUS            reduce using rule 8 (expression -> expression POWER expression .)
    MINUS           reduce using rule 8 (expression -> expression POWER expression .)
    $end            reduce using rule 8 (expression -> expression POWER expression .)
    POWER           shift and go to state 9

  ! POWER           [ reduce using rule 8 (expression -> expression POWER expression .) ]
  ! TIMES           [ shift and go to state 8 ]
  ! DIVIDE          [ shift and go to state 10 ]
  ! PLUS            [ shift and go to state 11 ]
  ! MINUS           [ shift and go to state 12 ]


state 17

    (9) expression -> expression DIVIDE expression .
    (7) expression -> expression . TIMES expression
    (8) expression -> expression . POWER expression
    (9) expression -> expression . DIVIDE expression
    (10) expression -> expression . PLUS expression
    (11) expression -> expression . MINUS expression

    TIMES           reduce using rule 9 (expression -> expression DIVIDE expression .)
    DIVIDE          reduce using rule 9 (expression -> expression DIVIDE expression .)
    PLUS            reduce using rule 9 (expression -> expression DIVIDE expression .)
    MINUS           reduce using rule 9 (expression -> expression DIVIDE expression .)
    $end            reduce using rule 9 (expression -> expression DIVIDE expression .)
    POWER           shift and go to state 9

  ! POWER           [ reduce using rule 9 (expression -> expression DIVIDE expression .) ]
  ! TIMES           [ shift and go to state 8 ]
  ! DIVIDE          [ shift and go to state 10 ]
  ! PLUS            [ shift and go to state 11 ]
  ! MINUS           [ shift and go to state 12 ]


state 18

    (10) expression -> expression PLUS expression .
    (7) expression -> expression . TIMES expression
    (8) expression -> expression . POWER expression
    (9) expression -> expression . DIVIDE expression
    (10) expression -> expression . PLUS expression
    (11) expression -> expression . MINUS expression

    PLUS            reduce using rule 10 (expression -> expression PLUS expression .)
    MINUS           reduce using rule 10 (expression -> expression PLUS expression .)
    $end            reduce using rule 10 (expression -> expression PLUS expression .)
    TIMES           shift and go to state 8
    POWER           shift and go to state 9
    DIVIDE          shift and go to state 10

  ! TIMES           [ reduce using rule 10 (expression -> expression PLUS expression .) ]
  ! POWER           [ reduce using rule 10 (expression -> expression PLUS expression .) ]
  ! DIVIDE          [ reduce using rule 10 (expression -> expression PLUS expression .) ]
  ! PLUS            [ shift and go to state 11 ]
  ! MINUS           [ shift and go to state 12 ]


state 19

    (11) expression -> expression MINUS expression .
    (7) expression -> expression . TIMES expression
    (8) expression -> expression . POWER expression
    (9) expression -> expression . DIVIDE expression
    (10) expression -> expression . PLUS expression
    (11) expression -> expression . MINUS expression

    PLUS            reduce using rule 11 (expression -> expression MINUS expression .)
    MINUS           reduce using rule 11 (expression -> expression MINUS expression .)
    $end            reduce using rule 11 (expression -> expression MINUS expression .)
    TIMES           shift and go to state 8
    POWER           shift and go to state 9
    DIVIDE          shift and go to state 10

  ! TIMES           [ reduce using rule 11 (expression -> expression MINUS expression .) ]
  ! POWER           [ reduce using rule 11 (expression -> expression MINUS expression .) ]
  ! DIVIDE          [ reduce using rule 11 (expression -> expression MINUS expression .) ]
  ! PLUS            [ shift and go to state 11 ]
  ! MINUS           [ shift and go to state 12 ]


state 20

    (12) var_assign -> NAME EQUALS expression .
    (7) expression -> expression . TIMES expression
    (8) expression -> expression . POWER expression
    (9) expression -> expression . DIVIDE expression
    (10) expression -> expression . PLUS expression
    (11) expression -> expression . MINUS expression

    $end            reduce using rule 12 (var_assign -> NAME EQUALS expression .)
    TIMES           shift and go to state 8
    POWER           shift and go to state 9
    DIVIDE          shift and go to state 10
    PLUS            shift and go to state 11
    MINUS           shift and go to state 12

